refactor: toList