@@ -1,19 +1,16 @@
 package fr.insee.survey.datacollectionmanagement.questioning.service.impl;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
 import fr.insee.survey.datacollectionmanagement.questioning.domain.Questioning;
 import fr.insee.survey.datacollectionmanagement.questioning.domain.QuestioningEvent;
 import fr.insee.survey.datacollectionmanagement.questioning.repository.QuestioningEventRepository;
 import fr.insee.survey.datacollectionmanagement.questioning.service.QuestioningEventService;
 import fr.insee.survey.datacollectionmanagement.questioning.util.LastQuestioningEventComparator;
 import fr.insee.survey.datacollectionmanagement.questioning.util.TypeQuestioningEvent;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import java.util.List;
+import java.util.Optional;
 
 @Service
 public class QuestioningEventServiceImpl implements QuestioningEventService {
@@ -45,17 +42,13 @@ public class QuestioningEventServiceImpl implements QuestioningEventService {
             List<TypeQuestioningEvent> events) {
 
         List<QuestioningEvent> listQuestioningEvent = questioning.getQuestioningEvents().stream()
-                .filter(qe -> events.contains(qe.getType()))
-                .collect(Collectors.toList());
-        Collections.sort(listQuestioningEvent, lastQuestioningEventComparator);
+                .filter(qe -> events.contains(qe.getType())).sorted(lastQuestioningEventComparator).toList();
         return listQuestioningEvent.stream().findFirst();
     }
 
     @Override
     public List<QuestioningEvent> findbyIdUpload(Long id){
-        List<QuestioningEvent> listQuestioningEvent = questioningEventRepository.findAll().stream().filter(qe -> qe.getUpload()!= null && qe.getUpload().getId().equals(id)).collect(Collectors.toList());
-
-        return listQuestioningEvent;
+        return questioningEventRepository.findAll().stream().filter(qe -> qe.getUpload()!= null && qe.getUpload().getId().equals(id)).toList();
     }
 
 }
